# Minesweeper

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
docs/: TECHNICAL_ARCHITECTURE.md
src/: lib.rs  main.rs
src/core/: components.rs  events.rs  mod.rs  resources.rs
src/game/: flood_fill.rs  grid.rs  minefield.rs  mod.rs  rules.rs
src/state/: game_state.rs  mod.rs  scene_manager.rs
src/systems/: audio.rs  game_logic.rs  input.rs  mod.rs  setup.rs  timer.rs
src/ui/: grid_renderer.rs  hud.rs  menu.rs  mod.rs
src/utils/: helpers.rs  mod.rs
tests/: game_flow_test.rs
